Intro module added

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,5 +13,12 @@
 
     </FrameLayout>
 
+    <View
+        android:visibility="gone"
+        android:id="@+id/snackbar_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
 
 </LinearLayout>
