--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -14,19 +14,10 @@
         android:layout_height="wrap_content"
         >
 
-        <ImageButton
-            android:id="@+id/ib_menu"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            style="@style/Base.Widget.AppCompat.ActionButton"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_view_headline"
-            />
-
         <TextView
             android:visibility="visible"
             android:id="@+id/tv_title"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -37,10 +28,10 @@
 
         <Button
             tools:visibility="visible"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:id="@+id/btn_date"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             tools:text="2015-12-22"
             style="@style/Base.Widget.AppCompat.ActionButton"
             android:textColor="@android:color/white"
