--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -17,6 +17,7 @@
        android:scaleType="centerCrop"
        tools:src="@drawable/rover_opportunity"
        />
+
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -82,4 +83,18 @@
         style="@style/Base.Widget.AppCompat.ActionButton"
         />
 
+    <ProgressBar
+        tools:visibility="visible"
+        android:id="@+id/line_progress"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="5dp"
+        android:indeterminate="false"
+        android:indeterminateOnly="false"
+        android:max="100"
+        android:progress="100"
+        android:indeterminateDrawable="@android:drawable/progress_horizontal"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_gravity="top"
+        />
 </android.support.v7.widget.CardView>
