--- a/app/src/main/res/layout/fragment_intro_main.xml
+++ b/app/src/main/res/layout/fragment_intro_main.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:oak="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@android:color/transparent"
     android:layout_width="match_parent"
-    android:background="@android:color/holo_blue_light"
     android:layout_height="match_parent">
 
     <oak.svg.AnimatedSvgView
         android:layout_gravity="center"
         android:id="@+id/animated_svg_view"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:layout_marginTop="100dp"
         android:layout_height="wrap_content"
         oak:oakSvgImageSizeX="1600"
         oak:oakSvgImageSizeY="1600"
@@ -17,5 +18,15 @@
         oak:oakSvgTraceTimePerGlyph="1000"
         oak:oakSvgFillStart="1200"
         oak:oakSvgFillTime="2000"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="SCROLL DOWN"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:layout_marginTop="40dp"
+        />
 
 </LinearLayout>
