thread running in background fixed

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -10,6 +10,10 @@
         android:id="@+id/sv_starfield"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+   <!-- <ImageView
+        android:id="@+id/iv_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />-->
 
     <com.androidyug.marsscope.ui.intro.VerticalViewPager
         android:id="@+id/vp_intro"
