--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -31,8 +31,11 @@
             android:visibility="invisible"
             android:id="@+id/btn_date"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginLeft="12dp"
+            android:padding="2dp"
             tools:text="2015-12-22"
+            android:background="@drawable/outline"
             style="@style/Base.Widget.AppCompat.ActionButton"
             android:textColor="@android:color/white"
             android:textStyle="bold"
