--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_back"
         android:layout_width="match_parent"
         android:background="@android:color/transparent"
+        app:contentInsetStart="0dp"
         android:layout_height="60dp">
 
         <ImageButton
@@ -14,6 +18,15 @@
             android:layout_height="wrap_content"
             style="@style/Base.Widget.AppCompat.ActionButton"
             android:src="@drawable/ic_action_arrow_left"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:textStyle="bold"
+            android:text="SELECT ROVER"
+            android:textColor="@android:color/white"
             />
 
     </android.support.v7.widget.Toolbar>
