--- a/app/src/main/res/layout/fragment_intro_main.xml
+++ b/app/src/main/res/layout/fragment_intro_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:oak="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/transparent"
     android:layout_width="match_parent"
@@ -9,9 +10,9 @@
     <oak.svg.AnimatedSvgView
         android:layout_gravity="center"
         android:id="@+id/animated_svg_view"
-        android:layout_width="200dp"
-        android:layout_marginTop="100dp"
         android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_marginTop="100dp"
         oak:oakSvgImageSizeX="1024"
         oak:oakSvgImageSizeY="1024"
         oak:oakSvgTraceTime="2000"
@@ -20,13 +21,30 @@
         oak:oakSvgFillTime="2000"/>
 
     <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MARS ROVER"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:padding="8dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_gravity="center"
+        />
+
+
+    <TextView
+        android:id="@+id/tv_scroll_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:text="SCROLL DOWN"
+        android:padding="4dp"
         android:textColor="@android:color/white"
         android:textSize="12sp"
-        android:layout_marginTop="40dp"
         />
 
 </LinearLayout>
