--- a/app/src/main/res/layout/fragment_select_rover.xml
+++ b/app/src/main/res/layout/fragment_select_rover.xml
@@ -1,25 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@android:color/black"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_select_rover"
+    <include
+        android:id="@+id/toolbar_back"
+        layout="@layout/toolbar"
+        />
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-        
+        android:layout_height="match_parent">
 
-    <com.viewpagerindicator.LinePageIndicator
-        android:id="@+id/lpi"
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        style="@style/CustomLinePageIndicator"
-        />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_select_rover"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <com.viewpagerindicator.LinePageIndicator
+            android:id="@+id/lpi"
+            android:padding="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            style="@style/CustomLinePageIndicator"
+            />
+
+    </FrameLayout>
 
 
-</FrameLayout>
+
+</LinearLayout>
