--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -21,10 +21,11 @@
             />
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textStyle="bold"
+            android:textSize="20sp"
             android:text="SELECT ROVER"
             android:textColor="@android:color/white"
             />
