--- a/app/src/main/res/layout/toolbar_detail.xml
+++ b/app/src/main/res/layout/toolbar_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +9,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_detail"
         android:layout_width="match_parent"
+        app:contentInsetStart="0dp"
+        android:elevation="8dp"
         android:background="@android:color/black"
         android:layout_height="60dp">
 
